--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "url": "https://github.com/SAP-samples/ui5-typescript-helloworld.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@babel/preset-typescript": "^7.13.0",
-    "@openui5/ts-types-esm": "1.90.1",
-    "@types/jquery": "^3.5.1",
-    "@types/qunit": "^2.5.4",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "@ui5/cli": "^2.10.4",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/openui5": "1.91.0",
+    "@types/jquery": "3.5.1",
+    "@types/qunit": "2.5.4",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "@ui5/cli": "^2.11.1",
     "babel-preset-transform-ui5": "^7.0.3",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.3.2",
     "ui5-middleware-livereload": "^0.5.4"
