--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:ui5": "ui5 build --clean-dest",
     "build:ui5:opt": "ui5 build self-contained --clean-dest --all",
     "start": "npm-run-all --parallel watch:ts start:ui5",
+    "watch:controls": "npx @ui5/ts-interface-generator --watch",
     "watch:ts": "babel src --out-dir webapp --source-maps inline --extensions \".ts,.js\" --copy-files --watch",
     "start:ui5": "ui5 serve --port 8080 -o index.html",
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
@@ -26,12 +27,13 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
-    "@types/openui5": "1.91.0",
     "@types/jquery": "3.5.1",
+    "@types/openui5": "1.94.0",
     "@types/qunit": "2.5.4",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "@ui5/cli": "^2.11.1",
+    "@ui5/ts-interface-generator": "0.0.1",
     "babel-preset-transform-ui5": "^7.0.3",
     "eslint": "^7.28.0",
     "npm-run-all": "^4.1.5",
