--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ node_modules/
 
 .DS_Store
 
-# do not add dependency lock files to this repo because it should remain independent from specific dependency managers
+# do not add dependency lock files to this sample repo because it should remain independent from specific dependency managers
 package-lock.json
 yarn.lock
