--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
-    "@types/jquery": "3.5.1",
-    "@types/openui5": "1.95.0",
+    "@types/jquery": "3.5.9",
+    "@types/openui5": "1.96.0",
     "@types/qunit": "2.5.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@ui5/cli": "^2.14.1",
-    "@ui5/ts-interface-generator": "0.2.0",
+    "@ui5/ts-interface-generator": "^0.2.1",
     "babel-preset-transform-ui5": "^7.0.5",
     "eslint": "^7.32.0",
     "npm-run-all": "^4.1.5",
