--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-preset-transform-ui5": "^7.0.5",
     "eslint": "^7.32.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.5.2",
+    "typescript": "~4.4.3",
     "ui5-middleware-livereload": "^0.5.8"
   },
   "ui5": {
