Update interface generator dependency to version working with TS 4.5
As interface generator 0.2.2 works around the incompatible change in the
TypeScript compiler API, the TypeScript version range can be opened
again.

See https://github.com/microsoft/TypeScript/wiki/API-Breaking-Changes#typescript-45

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ node_modules/
 # do not add dependency lock files to this sample repo because it should remain independent from specific dependency managers
 package-lock.json
 yarn.lock
+
+.vscode/settings.json
+.vscode/diff
