--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "@ui5/cli": "^2.14.1",
-    "@ui5/ts-interface-generator": "^0.2.1",
+    "@ui5/ts-interface-generator": "^0.2.2",
     "babel-preset-transform-ui5": "^7.0.5",
     "eslint": "^7.32.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "~4.4.3",
+    "typescript": "^4.4.3",
     "ui5-middleware-livereload": "^0.5.8"
   },
   "ui5": {
