--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ node_modules/
 
 .DS_Store
 
+.vscode/diff
+.vscode/settings.json
+
 # do not add dependency lock files to this repo because it should remain independent from specific dependency managers
 package-lock.json
 yarn.lock
