--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "build": "npm-run-all build:ts build:ui5",
     "build:opt": "npm-run-all build:ts build:ui5:opt",
-    "build:ts": "babel src --out-dir webapp --source-maps inline --extensions \".ts,.js\" --copy-files",
+    "build:ts": "babel src --out-dir webapp --source-maps true --extensions \".ts,.js\" --copy-files",
     "build:ui5": "ui5 build --clean-dest",
     "build:ui5:opt": "ui5 build self-contained --clean-dest --all",
     "start": "npm-run-all --parallel watch:ts start:ui5",
-    "watch:ts": "babel src --out-dir webapp --source-maps inline --extensions \".ts,.js\" --copy-files --watch",
+    "watch:ts": "babel src --out-dir webapp --source-maps true --extensions \".ts,.js\" --copy-files --watch",
     "start:ui5": "ui5 serve --port 8080 -o index.html",
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
     "ts-typecheck": "tsc --noEmit",
@@ -29,11 +29,11 @@
     "@types/openui5": "1.91.0",
     "@types/jquery": "3.5.1",
     "@types/qunit": "2.5.4",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "@ui5/cli": "^2.11.1",
     "babel-preset-transform-ui5": "^7.0.3",
-    "eslint": "^7.28.0",
+    "eslint": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.3.2",
     "ui5-middleware-livereload": "^0.5.4"
