--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "es2015",
         "skipLibCheck": true,
         "preserveConstEnums": true,
-        "sourceMap": false,
+        "inlineSourceMap": true,
         "allowJs": true,
         "strict": true,
         "strictNullChecks": false,
