--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/jquery": "3.5.9",
-    "@types/openui5": "1.96.0",
+    "@types/openui5": "^1.97.0",
     "@types/qunit": "2.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "@ui5/cli": "^2.14.1",
-    "@ui5/ts-interface-generator": "^0.2.2",
+    "@ui5/ts-interface-generator": "^0.2.3",
     "babel-preset-transform-ui5": "^7.0.5",
-    "eslint": "^8.3.0",
+    "eslint": "^8.4.1",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.4.3",
+    "typescript": "^4.5.3",
     "ui5-middleware-livereload": "^0.5.8"
   },
   "ui5": {
