Update to UI5 1.98; enable strictNullChecks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "inlineSourceMap": true,
         "allowJs": true,
         "strict": true,
-        "strictNullChecks": false,
+        "strictNullChecks": true,
         "strictPropertyInitialization": false,
         "rootDir": "./src",
         "outDir": "./dist",
