--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "sourceMap": false,
         "allowJs": true,
         "strict": true,
-        "strictNullChecks": false,
+        "strictNullChecks": true,
         "strictPropertyInitialization": false,
         "rootDir": "./src",
         "outDir": "./dist",
