--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "url": "https://github.com/SAP-samples/ui5-typescript-helloworld.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/openui5": "^1.100.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "@ui5/cli": "^2.14.7",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/openui5": "1.104.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "@ui5/cli": "^2.14.9",
     "babel-preset-transform-ui5": "^7.0.5",
-    "eslint": "^8.12.0",
+    "eslint": "^8.20.0",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.6.3",
-    "ui5-middleware-livereload": "^0.5.9"
+    "typescript": "^4.7.4",
+    "ui5-middleware-livereload": "^0.5.13"
   },
   "ui5": {
     "dependencies": [
