--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "es2015",
         "module": "es2015",
+        "moduleResolution": "node",
         "skipLibCheck": true,
         "preserveConstEnums": true,
         "inlineSourceMap": true,
