--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
     "compilerOptions": {
         "target": "es2015",
         "module": "es2015",
+        "moduleResolution": "node",
         "skipLibCheck": true,
         "preserveConstEnums": true,
-        "sourceMap": false,
+        "inlineSourceMap": true,
         "allowJs": true,
         "strict": true,
         "strictNullChecks": true,
