--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# build results
-webapp
-dist
-
 # Logs
 logs
 *.log
@@ -9,14 +5,23 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Dependency directories
-node_modules/
-
-.DS_Store
-
-.vscode/diff
-.vscode/settings.json
-
 # do not add dependency lock files to this repo because it should remain independent from specific dependency managers
 package-lock.json
 yarn.lock
+pnpm-lock.yaml
+
+# Mac system files
+.DS_Store
+
+# VSCode files
+.vscode/diff
+.vscode/settings.json
+
+# do not add typescript buildinfo
+tsconfig.tsbuildinfo
+
+# Dependency directories
+node_modules/
+
+# build results
+dist
