--- a/ui5-dist.yaml
+++ b/ui5-dist.yaml
@@ -1,4 +1,4 @@
-specVersion: "2.0"
+specVersion: "3.0"
 metadata:
   name: ui5.typescript.helloworld
 type: application
@@ -8,9 +8,9 @@ resources:
       webapp: dist
 framework:
   name: OpenUI5
-  version: "1.104.0"
+  version: "1.112.0"
   libraries:
     - name: sap.m
     - name: sap.ui.core
     - name: sap.ui.unified
-    - name: themelib_sap_fiori_3
+    - name: themelib_sap_horizon
