--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "author": "SAP SE",
   "license": "Apache-2.0",
   "scripts": {
+    "clean": "rimraf dist coverage",
     "build": "ui5 build --clean-dest",
     "build:opt": "ui5 build self-contained --clean-dest --all",
     "start": "ui5 serve --port 8080 -o index.html",
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
     "ts-typecheck": "tsc --noEmit",
-    "lint": "eslint webapp"
+    "lint": "eslint webapp",
+    "karma": "karma start",
+    "karma-ci": "karma start karma-ci.conf.js",
+    "karma-ci-cov": "karma start karma-ci-cov.conf.js",
+    "test": "npm run lint && npm run karma-ci-cov"
   },
   "repository": {
     "type": "git",
@@ -18,13 +23,19 @@
   },
   "devDependencies": {
     "@types/openui5": "1.112.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "@ui5/cli": "^3.0.6",
-    "eslint": "^8.37.0",
-    "typescript": "^5.0.3",
+    "eslint": "^8.38.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-ui5": "^3.0.2",
+    "karma-ui5-transpile": "^0.3.3",
+    "rimraf": "^5.0.0",
+    "typescript": "^5.0.4",
     "ui5-middleware-livereload": "^0.8.2",
-    "ui5-middleware-simpleproxy": "^0.9.5",
-    "ui5-tooling-transpile": "^0.7.0"
+    "ui5-middleware-simpleproxy": "^0.9.6",
+    "ui5-tooling-transpile": "^0.7.2"
   }
 }
