--- a/package.json
+++ b/package.json
@@ -5,43 +5,28 @@
   "author": "SAP SE",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "npm-run-all build:ts build:ui5",
-    "build:opt": "npm-run-all build:ts build:ui5:opt",
-    "build:ts": "babel src --out-dir webapp --source-maps true --extensions \".ts,.js\" --copy-files",
-    "build:ui5": "ui5 build --clean-dest",
-    "build:ui5:opt": "ui5 build self-contained --clean-dest --all",
-    "start": "npm-run-all --parallel watch:ts start:ui5",
-    "watch": "npm-run-all --parallel watch:controls watch:ts start:ui5",
-    "watch:controls": "npx @ui5/ts-interface-generator --watch",
-    "watch:ts": "babel src --out-dir webapp --source-maps true --extensions \".ts,.js\" --copy-files --watch",
-    "start:ui5": "ui5 serve --port 8080 -o index.html",
+    "build": "ui5 build --clean-dest",
+    "build:opt": "ui5 build self-contained --clean-dest --all",
+    "start": "ui5 serve --port 8080 -o index.html",
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
+    "watch:controls": "npx @ui5/ts-interface-generator --watch",
     "ts-typecheck": "tsc --noEmit",
-    "lint": "eslint src"
+    "lint": "eslint webapp"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/SAP-samples/ui5-typescript-helloworld.git"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/openui5": "1.114.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "@ui5/cli": "^3.1.3",
-    "@ui5/ts-interface-generator": "^0.6.2",
-    "babel-preset-transform-ui5": "^7.0.5",
-    "eslint": "^8.41.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.0.4",
-    "ui5-middleware-livereload": "^0.8.2"
-  },
-  "ui5": {
-    "dependencies": [
-      "ui5-middleware-livereload"
-    ]
+    "@types/openui5": "1.115.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@ui5/cli": "^3.0.6",
+    "@ui5/ts-interface-generator": "^0.7.0",
+    "eslint": "^8.37.0",
+    "typescript": "^5.0.3",
+    "ui5-middleware-livereload": "^0.8.2",
+    "ui5-middleware-simpleproxy": "^0.9.5",
+    "ui5-tooling-transpile": "^0.7.0"
   }
 }
