--- a/ui5.yaml
+++ b/ui5.yaml
@@ -1,21 +1,22 @@
-specVersion: "2.0"
+specVersion: "3.0"
 metadata:
   name: ui5.typescript.helloworld
 type: application
 framework:
   name: OpenUI5
-  version: "1.114.0"
+  version: "1.115.1"
   libraries:
     - name: sap.m
     - name: sap.ui.core
     - name: sap.ui.unified
-    - name: themelib_sap_fiori_3
+    - name: themelib_sap_horizon
+builder:
+  customTasks:
+    - name: ui5-tooling-transpile-task
+      afterTask: replaceVersion
 server:
   customMiddleware:
-  - name: ui5-middleware-livereload
-    afterMiddleware: compression
-    configuration:
-      debug: true
-      extraExts: "xml,json,properties"
-      port: 35729
-      path: "webapp"
+    - name: ui5-tooling-transpile-middleware
+      afterMiddleware: compression
+    - name: ui5-middleware-livereload
+      afterMiddleware: compression
