--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "karma": "karma start",
     "karma-ci": "karma start karma-ci.conf.js",
     "karma-ci-cov": "karma start karma-ci-cov.conf.js",
-    "test": "npm run lint && npm run karma-ci-cov"
+    "test": "npm run lint && npm run karma-ci-cov",
+    "wdi5": "wdio run ./webapp/test/e2e/wdio.conf.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,10 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "@ui5/cli": "^3.4.0",
+    "@wdio/cli": "^8",
+    "@wdio/local-runner": "^8",
+    "@wdio/mocha-framework": "^8",
+    "@wdio/spec-reporter": "^8",
     "eslint": "^8.46.0",
     "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.2.0",
@@ -33,8 +38,9 @@
     "karma-ui5": "^3.0.3",
     "karma-ui5-transpile": "^3.0.1",
     "rimraf": "^5.0.1",
-    "typescript": "^5.1.6",
+    "ts-node": "^10.9.1",
     "ui5-middleware-livereload": "^3.0.0",
-    "ui5-tooling-transpile": "^3.0.1"
+    "ui5-tooling-transpile": "^3.0.1",
+    "wdio-ui5-service": "^2"
   }
 }
