--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma-ui5": "^3.0.3",
     "karma-ui5-transpile": "^3.2.3",
     "rimraf": "^5.0.1",
+    "typescript": "^5.2.2",
     "ts-node": "^10.9.1",
     "ui5-middleware-livereload": "^3.0.0",
     "ui5-tooling-transpile": "^3.2.3",
