--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
     "url": "https://github.com/SAP-samples/ui5-typescript-helloworld.git"
   },
   "devDependencies": {
-    "@types/openui5": "1.116.1",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "@ui5/cli": "^3.4.0",
-    "eslint": "^8.46.0",
-    "karma": "^6.4.2",
+    "@types/openui5": "1.127.0",
+    "@ui5/cli": "^4",
+    "eslint": "^9.10.0",
+    "typescript-eslint": "^8.4.0",
+    "globals": "^15.9.0",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
-    "karma-ui5": "^3.0.3",
-    "karma-ui5-transpile": "^3.0.1",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.6",
-    "ui5-middleware-livereload": "^3.0.0",
-    "ui5-tooling-transpile": "^3.0.1"
+    "karma-ui5": "^4.0.1",
+    "karma-ui5-transpile": "^3",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.6.2",
+    "ui5-middleware-livereload": "^3",
+    "ui5-middleware-simpleproxy": "^3",
+    "ui5-tooling-transpile": "^3"
   }
 }
