--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "ui5 serve --port 8080 -o index.html",
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
     "ts-typecheck": "tsc --noEmit",
-    "lint": "eslint webapp"
+    "lint": "eslint webapp",
+    "ui5lint": "ui5lint"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,11 @@
   "devDependencies": {
     "@types/openui5": "1.127.0",
     "@ui5/cli": "^4",
-    "eslint": "^9.10.0",
-    "typescript-eslint": "^8.4.0",
-    "globals": "^15.9.0",
-    "typescript": "^5.6.2",
+    "@ui5/linter": "^1.1.1",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
     "ui5-middleware-livereload": "^3",
     "ui5-middleware-simpleproxy": "^3",
     "ui5-tooling-transpile": "^3"
