Update dependencies; add ui5linter; fix ui5linter findings

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:dist": "ui5 serve  --port 8080 -o index.html --config ui5-dist.yaml",
     "ts-typecheck": "tsc --noEmit",
     "lint": "eslint webapp",
+    "ui5lint": "ui5lint",
     "karma": "karma start",
     "karma-ci": "karma start karma-ci.conf.js",
     "karma-ci-cov": "karma start karma-ci-cov.conf.js",
@@ -22,18 +23,19 @@
     "url": "https://github.com/SAP-samples/ui5-typescript-helloworld.git"
   },
   "devDependencies": {
-    "@types/openui5": "1.127.0",
+    "@types/openui5": "1.131.0",
     "@ui5/cli": "^4",
-    "eslint": "^9.10.0",
-    "typescript-eslint": "^8.4.0",
-    "globals": "^15.9.0",
+    "@ui5/linter": "^1.1.1",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
-    "karma-ui5": "^4.0.1",
+    "karma-ui5": "^4.1.0",
     "karma-ui5-transpile": "^3",
     "rimraf": "^6.0.1",
-    "typescript": "^5.6.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.18.1",
     "ui5-middleware-livereload": "^3",
     "ui5-middleware-simpleproxy": "^3",
     "ui5-tooling-transpile": "^3"
